more readable and fixed faq buttons

--- a/web/ugahacks-7/styles/mobile.module.css
+++ b/web/ugahacks-7/styles/mobile.module.css
@@ -53,7 +53,7 @@
   text-align: center;
   margin-bottom: 4%;
   color: white;
-  font-size: 2.6em;
+  font-size: 2.9em;
   padding-top: 0;
   margin-top: .2em;
 }
@@ -63,6 +63,7 @@
   padding: 4%;
   font-size: 1.6em;
   border-width: .2.5em;
+  font-family: 'monospace', times, serif;
 } 
 .borderlink {
   border: #E83151;
